2006-08-10  Dirk Göttel <dgoettel@freenet.de>

	* data/gnome-commander.ebuild:
	Updated ebuild file for gentoo systems.

2006-08-08  Piotr Eljasiak  <epiotr@use.pl>

	* *.h:
	Added C_BEGIN_DECLS and C_END_DECLS.

	* plugins/fileroller.c:
	Added support for archives via FileRoller.

	* pixmaps/Makefile.am:
	* src/gnome-cmd-main-menu.c:
	* src/gnome-cmd-pixmap.c:
	* src/imageloader.c:
	* src/imageloader.h:
	Remove excessive icons.

2006-08-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.c:
	Use GNOME stock items for menus.

2006-08-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.l:
	Added python-like indices for placeholders in advrename.

2006-07-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	Added 'help' button to advrename dlg.

2006-07-29  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/figures/gnome-commander_dialog_adv_rename.png:
	* doc/C/figures/gnome-commander_window.png:
	* doc/C/gnome-commander.xml:
	* doc/Makefile.am:
	Updated docs

2006-07-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.c:
	Detect malformed (empty) 'connections' file

2006-07-19  Piotr Eljasiak  <epiotr@use.pl>

	* plugins/test/Makefile.am:
	Do not install test plugin

	* src/gnome-cmd-con-ftp.c:
	* src/gnome-cmd-con-ftp.h:
	* src/gnome-cmd-data.c:
	* src/gnome-cmd-ftp-dialog.c:
	Added partial support for setting ftp remote dir

2006-07-18  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/Makefile.am:
	Set PLUGIN_DIR in Makefile.am

2006-07-17  <dmacks@netspace.org>

	* plugins/cvs/Makefile.am:
	* plugins/fileroller/Makefile.am:
	* plugins/test/Makefile.am:
	Incorrect use of Makefile linker flags

2006-07-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-device.c:
	* src/gnome-cmd-data.c:
	* src/utils.c:
	Added some minor safety precautions for fgets().

	* cofigure.in:
	* data/gnome-commander.spec.in:
	Added glib dependencies (>=2.6.0)

2006-06-27  Piotr Eljasiak  <epiotr@use.pl>
