@@ -13,6 +13,7 @@ New features:
  * Support for archives (gz,bz2,zip,lha,rar,jar,7-zip,zoo,deb,rpm) via FileRoller plugin
  * New python-like indices for advanced file rename templates
  * Revamped application menus
+ * Saving window state across sessions
  * New icon for internal viewer
  * Updated help docs
  * New or updated translations: cs, de, es, eu, hu, it, ru, sv, vi
